--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 layout: default
 ---
 
-<div style="text-align: center;">
-<p><img src="{{ site.baseurl }}/images/myworld.jpeg" height="480" width="480"></p>
+<div style="text-align:center;">
+<img src="{{ site.baseurl }}/images/myworld.jpeg" height="68%" width="68%"></p>
 </div>
