finaliza o primeiro post

--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@ permalink: /blog/
         {{ post.excerpt }}
       </div>
 
-      <a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Read More</a>
+      <a href="{{ site.baseurl }}{{ post.url }}">Clique para ler o artigo…</a>
     </article>
   {% endfor %}
 </div>
